--- a/solano.yml
+++ b/solano.yml
@@ -1,15 +1,9 @@
 tests:
-- cat config/elasticsearch.yml
 - env | sort
-- netstat -plant
-- curl http://localhost:9200/
-- find $HOME/es -type f | sort
-- sleep 120
+- mysql -u $TDDIUM_DB_MYSQL_USER -p$TDDIUM_DB_MYSQL_PASSWORD -e 'SELECT @@GLOBAL.sql_mode'
+mysql:
+  version: '5.7'
+  config:
+    sql_mode: 'STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION'
 test_pattern:
 - none
-java:
-  java_version: java-8-openjdk
-elasticsearch:
-  version: '2.4.2'
-  plugins:
-    - 'ingest-attachment'
