--- a/solano.yml
+++ b/solano.yml
@@ -1,6 +1,7 @@
 tests:
 - env | sort
 - mysql -u $TDDIUM_DB_MYSQL_USER -p$TDDIUM_DB_MYSQL_PASSWORD -e 'SELECT @@GLOBAL.sql_mode'
+- cat $HOME/db/mysql{TDDIUM_TID}/conf/my.cnf
 mysql:
   version: '5.7'
   config:
